force-app/main/default/objects/Booking__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <label>Attendee Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Expected number of attendees</description>
</CustomField> 