force-app/main/default/objects/Booking__c/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <label>Booking Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Additional notes for the booking</description>
</CustomField> 