force-app/main/default/objects/Booking__c/fields/Booking_User__c.field-meta.xml
<CustomField>
    <fullName>Booking_User__c</fullName>
    <label>Booking User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
    <description>User making the booking</description>
</CustomField>