force-app/main/default/objects/Booking__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
    <description>Booking end date and time</description>
</CustomField> 