force-app/main/default/objects/Booking__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
    <description>Booked equipment (optional)</description>
</CustomField> 