force-app/main/default/objects/Booking__c/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Sent</label>
    <type>Checkbox</type>
    <description>Email notification sent status</description>
</CustomField> 