force-app/main/default/objects/Booking__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Booking reason and purpose</description>
</CustomField>