force-app/main/default/objects/Booking__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not_Returned</fullName>
                <label>Not Returned</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Return status for equipment bookings</description>
</CustomField> 