force-app/main/default/objects/Booking__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
    <description>Booking start date and time</description>
</CustomField> 